added grunt qunit task

--- a/index.jade
+++ b/index.jade
@@ -16,6 +16,7 @@ html
 
     script(src="http://code.jquery.com/jquery-2.1.0.min.js")
     script(src="http://code.jquery.com/qunit/qunit-1.14.0.js")
+    script(src="bower_components/es5-shim.js")
     script(src="bower_components/bespoke.js")
     script(src="bower_components/bespoke-hash.js")
     script(src="bower_components/flowtype.js")
