--- a/index.jade
+++ b/index.jade
@@ -20,21 +20,27 @@ html
         width: 800px;
         height: 600px;
         margin: auto;
+        position: relative;
       }
       .bespoke-slide > span > * {
         padding-left: 20px;
       }
       .bespoke-slide > img {
-        width: 100%;
+        max-width: 100%;
         height: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
-      .bespoke-slide span.fullscreen-caption {
-        position: relative;
-        top: -2em;
+      .bespoke-slide .fullscreen-caption {
+        position: absolute;
+        z-index: 100;
+        bottom: 0em;
         left: 0;
         padding-top: 0.5em;
         padding-left: 0.75em;
         padding-right: 2em;
+        margin: 0;
         font-size: 32pt;
         display: inline-block;
         background-image: -webkit-gradient(
@@ -72,7 +78,7 @@ html
 
         QUnit.test('number of slides', function () {
           var slides = $('#presentation > article > section');
-          QUnit.equal(slides.length, 4, 'number of slides');
+          QUnit.ok(slides.length > 4, 'number of slides');
         });
 
         QUnit.test('title', function () {
@@ -105,7 +111,7 @@ html
           $slide = postProcessSlide($slide);
           QUnit.equal(typeof $slide, 'object', 'returns an object');
 
-          var caption = $('span', $slide).text();
+          var caption = $('.fullscreen-caption', $slide).text();
           QUnit.equal(caption, 'slide four', 'correct caption from image alt text');
         });
       });
