--- a/slides-now-core.styl
+++ b/slides-now-core.styl
@@ -10,6 +10,9 @@
   margin: auto;
   position: relative;
 }
+.bespoke-slide blockquote > p {
+  white-space: pre;
+}
 .bespoke-slide > span > * {
   padding-left: 20px;
 }
